--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   publish = "dist"
 
 [template.environment]
-  VUE_APP_API_KEY = "AIzaSyDodh4b9s5RwgvFKTocGdKsIKBx0PPpN3k"
+  VUE_APP_API_KEY = "VUE_APP_API_KEY"
   VUE_APP_FIREBASE_API_KEY = "YOUR_FIREBASE_API_KEY"
   VUE_APP_FIREBASE_AUTH_DOMAIN = "YOUR_FIREBASE_FIREBASE_AUTH_DOMAIN"
   VUE_APP_FIREBASE_DATABASE_URL = "YOUR_FIREBASE_FIREBASE_DATABASE_URL"
